Data Pre-processing and Feature Engineering

--- a/Portfolio_project.ipynb
+++ b/Portfolio_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   index InvoiceNo StockCode                          Description  Quantity  \\\n",
+      "0      0    536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
+      "1      1    536365     71053                  WHITE METAL LANTERN         6   \n",
+      "2      2    536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
+      "3      3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
+      "4      4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
+      "\n",
+      "      InvoiceDate  UnitPrice  CustomerID         Country  \n",
+      "0  12/1/2010 8:26       2.55     17850.0  United Kingdom  \n",
+      "1  12/1/2010 8:26       3.39     17850.0  United Kingdom  \n",
+      "2  12/1/2010 8:26       2.75     17850.0  United Kingdom  \n",
+      "3  12/1/2010 8:26       3.39     17850.0  United Kingdom  \n",
+      "4  12/1/2010 8:26       3.39     17850.0  United Kingdom  \n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize S3 client\n",
     "s3 = boto3.client('s3')\n",
@@ -36,6 +56,394 @@
     "# Quick look at the DataFrame\n",
     "print(df.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perfroming EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>541909.00000</td>\n",
+       "      <td>541909.000000</td>\n",
+       "      <td>541909.000000</td>\n",
+       "      <td>406829.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>270954.00000</td>\n",
+       "      <td>9.552250</td>\n",
+       "      <td>4.611114</td>\n",
+       "      <td>15287.690570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>156435.79785</td>\n",
+       "      <td>218.081158</td>\n",
+       "      <td>96.759853</td>\n",
+       "      <td>1713.600303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>-80995.000000</td>\n",
+       "      <td>-11062.060000</td>\n",
+       "      <td>12346.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>135477.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>13953.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>270954.00000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.080000</td>\n",
+       "      <td>15152.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>406431.00000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>4.130000</td>\n",
+       "      <td>16791.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>541908.00000</td>\n",
+       "      <td>80995.000000</td>\n",
+       "      <td>38970.000000</td>\n",
+       "      <td>18287.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              index       Quantity      UnitPrice     CustomerID\n",
+       "count  541909.00000  541909.000000  541909.000000  406829.000000\n",
+       "mean   270954.00000       9.552250       4.611114   15287.690570\n",
+       "std    156435.79785     218.081158      96.759853    1713.600303\n",
+       "min         0.00000  -80995.000000  -11062.060000   12346.000000\n",
+       "25%    135477.00000       1.000000       1.250000   13953.000000\n",
+       "50%    270954.00000       3.000000       2.080000   15152.000000\n",
+       "75%    406431.00000      10.000000       4.130000   16791.000000\n",
+       "max    541908.00000   80995.000000   38970.000000   18287.000000"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index               0\n",
+      "InvoiceNo           0\n",
+      "StockCode           0\n",
+      "Description      1454\n",
+      "Quantity            0\n",
+      "InvoiceDate         0\n",
+      "UnitPrice           0\n",
+      "CustomerID     135080\n",
+      "Country             0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541909, 9)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['index', 'InvoiceNo', 'StockCode', 'Description', 'Quantity',\n",
+       "       'InvoiceDate', 'UnitPrice', 'CustomerID', 'Country'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index            int64\n",
+       "InvoiceNo       object\n",
+       "StockCode       object\n",
+       "Description     object\n",
+       "Quantity         int64\n",
+       "InvoiceDate     object\n",
+       "UnitPrice      float64\n",
+       "CustomerID     float64\n",
+       "Country         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data cleaning and Pre Processiong "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert data types\n",
+    "df['InvoiceDate'] = pd.to_datetime(df['InvoiceDate'])\n",
+    "df['CustomerID'] = df['CustomerID'].astype('string')\n",
+    "df['Country'] = df['Country'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index                   int64\n",
+       "InvoiceNo              object\n",
+       "StockCode              object\n",
+       "Description            object\n",
+       "Quantity                int64\n",
+       "InvoiceDate    datetime64[ns]\n",
+       "UnitPrice             float64\n",
+       "CustomerID     string[python]\n",
+       "Country              category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle Missing Values\n",
+    "# Filling missing descriptions with a placeholder\n",
+    "df['Description'] = df['Description'].fillna('No Description')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace missing 'CustomerID' values with \"Guest\" \n",
+    "# Convert CustomerID to string so that \"Guest\" is a valid entry\n",
+    "df['CustomerID'] = df['CustomerID'].fillna('Guest').astype(str) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index          0\n",
+      "InvoiceNo      0\n",
+      "StockCode      0\n",
+      "Description    0\n",
+      "Quantity       0\n",
+      "InvoiceDate    0\n",
+      "UnitPrice      0\n",
+      "CustomerID     0\n",
+      "Country        0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Re-check missing values after replacement\n",
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove outliers: Remove rows with non-positive Quantity\n",
+    "df = df[df['Quantity'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(531285, 9)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Engineering "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to analyze the time period, additional columns are created\n",
+    "df['Year'] = df['InvoiceDate'].dt.year\n",
+    "df['Month'] = df['InvoiceDate'].dt.month\n",
+    "df['DayOfWeek'] = df['InvoiceDate'].dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Revenue column\n",
+    "df['Revenue'] = df['Quantity'] * df['UnitPrice']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Descriptive Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
